--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <!DOCTYPE HTML>
 <html lang="en">
   <head>
-    
+    <link rel="stylesheet" type="text/css" href="style.css">
     <title>
       This is a title
     </title>
